# fxfloorboard

./: CMakeLists.txt  GT-100FxFloorBoard.icns  GT-100FxFloorBoard.pri  GT-100FxFloorBoard.pro  GT-100FxFloorBoard.qrc  GT-100FxFloorBoard.rc  MidiTable.cpp  MidiTable.h  MidiTableDestroyer.cpp  MidiTableDestroyer.h  Preferences.cpp  Preferences.h  PreferencesDestroyer.cpp  Qbuild.bat  RtMidi.h  SysxIO.cpp  SysxIO.h  SysxIODestroyer.cpp  SysxIODestroyer.h  about  bankTreeList.cpp  bankTreeList.h  bulkEditDialog.cpp  bulkEditDialog.h  bulkLoadDialog.cpp  bulkLoadDialog.h  bulkSaveDialog.cpp  bulkSaveDialog.h  customButton.cpp  customButton.h  customComboBox.cpp  customComboBox.h  customControlEZ_Patch.cpp  customControlEZ_amp.cpp  customControlEZ_amp.h  customControlGraphicEQ.cpp  customControlGraphicEQ.h  customControlKnob.cpp  customControlKnob.h  customControlLabel.cpp  (+181 more)
android/: AndroidManifest.xml
branches/gt-100/: GT-100FxFloorBoard.icns  GT-100FxFloorBoard.pri  GT-100FxFloorBoard.pro  GT-100FxFloorBoard.qrc  MidiTable.cpp  MidiTable.h  MidiTableDestroyer.cpp  MidiTableDestroyer.h  Preferences.cpp  Preferences.h  PreferencesDestroyer.cpp  PreferencesDestroyer.h  RtMidi.cpp  SysxIO.cpp  SysxIO.h  SysxIODestroyer.cpp  about  bankTreeList.cpp  bankTreeList.h  bulkEditDialog.cpp  bulkEditDialog.h  bulkLoadDialog.cpp  bulkLoadDialog.h  bulkSaveDialog.cpp  bulkSaveDialog.h  customButton.cpp  customComboBox.cpp  customComboBox.h  customControlEZ_Patch.cpp  customControlEZ_Patch.h  customControlEZ_amp.cpp  customControlEZ_amp.h  customControlGraphicEQ.cpp  customControlGraphicEQ.h  customControlKnob.cpp  customControlKnob.h  customControlLabel.cpp  customControlLabel.h  customControlListMenu.cpp  customControlListMenu.h  (+187 more)
branches/gt-100/images/: floor.psd
branches/gt-100/packager/: gt-100packager.nsi  preferences.xml.dist  readme.txt  temp-1.syx  temp-2.syx  temp-3.syx  temp-4.syx  temp-5.syx
branches/gt-100/packager/Init Patches/: 000_INIT_Empty.syx  001_INIT_(JC_Clean)_Roland_JC120.syx  002_INIT_(JC_Clean)_Warm_Clean.syx  006_INIT_(TW_Clean)_Fender_Twin_Reverb_Clean.syx  010_INIT_(Chrunch)_Crunch.syx
branches/gt-100/packager/sourceforge readme/: readme.txt
branches/gt-100/qss/: blue.qss  default.qss  green.qss  system.qss  white.qss
images/: floor.psd
packager/: gt-100packager.nsi  readme.txt  temp-1.syx  temp-2.syx  temp-3.syx  temp-4.syx  temp-5.syx
packager/Init Patches/: 004_INIT_(JC_Clean)_Full_Range.syx  005_INIT_Two channels and effects.syx  011_INIT_(Crunch)_.syx_Stack_Crunch.syx  020_INIT_(BG_Lead)_Messa_Boogie_Lead.syx  023_INIT_(BG_Lead)_Messa_Boogie_Mark_I_Smooth_Drive.syx  040_INIT_(HiGain)_Soldano_SLO-100.syx  042_INIT_(HiGain)_Lead_Stack.syx  047_INIT_(Custom)_Custom_1.syx  047_INIT_(Custom)_Custom_2.syx
packager/sourceforge readme/: readme.txt
qss/: black.qss  blue.qss  green.qss  system.qss  white.qss
